新增物品，方块 新增数据生成